disbale query cache